added div for h3 and text aling in style sheet

--- a/style.css
+++ b/style.css
@@ -7,8 +7,13 @@
 }
 
 .fab {
-    /*font-size: 50px; desktop size*/ 
-    font-size: 30px; /*mobile size*/
+    /*font-size: 50px; desktop size*/
+    font-size: 30px;
+    /*mobile size*/
     margin: 0px 20px;
     color: rgb(134, 133, 133);
+}
+
+.reachout {
+    text-align: center;
 }
