added marging-top to icons

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@
     text-align: center;
 }
 
-.icons-social {
+.reachOut {
     background-color: #e9ecef;
+}
+
+.icons-social {
+    margin-top: 30px;
 }
