--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@
 
 .reachOut {
     text-align: center;
+    background-color: #e9ecef;
 }
 
 .icons-social {
-    background-color: #e9ecef;
+    margin-top: 30px;
 }
