--- a/style.css
+++ b/style.css
@@ -9,21 +9,13 @@
 .fab,
 .fas {
     /*font-size: 50px; desktop size*/
-    font-size: 30px;
+    font-size: 40px;
     /*mobile size*/
     margin: 0px 20px;
     color: rgb(134, 133, 133);
 }
 
-.reachOut {
-    text-align: center;
-    background-color: #e9ecef;
-}
-
 .icons-social {
     margin: 30px 0px;
-    background-color: #b8d5f1;
-}
-
-
+    background-color: #e1ebf5;
 }
