--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     margin-bottom: 20px;
 }
 
-.icons-social {
-    text-align: center;
-}
-
 .fab,
 .fas {
     /*font-size: 50px; desktop size*/
@@ -15,7 +11,12 @@
     color: rgb(134, 133, 133);
 }
 
+.row {
+    background-color: #cbddec;
+}
+
 .icons-social {
+    text-align: center;
     margin: 30px 0px;
-    background-color: #e1ebf5;
+    background-color: #cbddec;
 }
