added shadow to cards

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin-bottom: 20px;
 }
 
+.card {
+    box-shadow: 2px 2px 10px grey;
+}
+
 .fab,
 .fas {
     /*font-size: 50px; desktop size*/
