--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-h4 {
-    margin-bottom: 30px;
-}
-
 .col-sm-6 {
     margin-bottom: 20px;
 }
@@ -12,11 +8,13 @@ h4 {
 }
 
 .avatar {
+    background-image: url(media/avatar.jpg);
+    background-size: cover;
     width: 100px;
     height: 100px;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 3px 2px 15px black;
+    border: 0.5px solid #fbfbfb;
+    border-radius: 50%;
+    box-shadow: 3px 2px 5px #a9a9a9;
     float: right;
 }
 
