--- a/style.css
+++ b/style.css
@@ -37,3 +37,9 @@
     margin: 30px 0px;
     background-color: #8d8d8d;
 }
+
+.copyright {
+    text-align: center;
+    color: #afafaf;
+    margin-top: 20px;
+}
