--- a/style.css
+++ b/style.css
@@ -5,13 +5,18 @@
 .card {
     box-shadow: 2px 2px 10px grey;
     border: none;
+    transition: all 0.8s;
+}
+
+.card:hover {
+    transform: scale(1.1);
 }
 
 .avatar {
     background-image: url(media/avatar.jpg);
     background-size: cover;
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     border: 0.5px solid #fbfbfb;
     border-radius: 50%;
     box-shadow: 3px 2px 5px #a9a9a9;
@@ -42,4 +47,14 @@
     text-align: center;
     color: #afafaf;
     margin-top: 20px;
+}
+
+.lead {
+    text-align: justify;
+}
+
+.about {
+    padding-top: 10px;
+    margin: 30px;
+    border-radius: 7% / 50%;
 }
