--- a/quiz_app/quizApp.css
+++ b/quiz_app/quizApp.css
@@ -18,16 +18,21 @@ body {
 
 .container {
     height: auto;
-    width: 1000px;
+    width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 20px;
     border: 1px solid #08038C;
     box-shadow: 0 0 8px 3px rgb(12, 12, 12);
 }
+
+
+/* #quizContainer {
+    width: 90%
+} */
 
 .title {
     padding-top: 20px;
@@ -48,7 +53,7 @@ body {
 }
 
 .option {
-    width: 370px;
+    width: 150px;
     display: inline-block;
     padding: 10px 0 10px 15px;
     vertical-align: middle;
