--- a/word_counter/wordcounter.css
+++ b/word_counter/wordcounter.css
@@ -7,7 +7,10 @@ body {
 .container {
     width: 90%;
     height: auto;
-    background-color: yellowgreen;
+}
+
+.flex-title {
+    display: flex;
 }
 
 h1 {
@@ -20,7 +23,7 @@ h1 {
 }
 
 textarea {
-    position: relative;
+    position: flex;
     top: 50px;
     left: 200px;
     border-radius: 3px;
@@ -28,4 +31,10 @@ textarea {
 
 button {
     letter-spacing: 2px;
+    background-color: #707070;
+    outline: none
+}
+
+button:focus {
+    outline: none;
 }
