--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 .avatar {
-  background-image: url(media/avatar.jpg);
+  background-image: url(media/newavatar.jpg);
   background-size: cover;
   width: 130px;
   height: 130px;
